--- a/.github/workflows/air-quality-daily.yml
+++ b/.github/workflows/air-quality-daily.yml
@@ -2,8 +2,9 @@ name: air-quality-daily
 
 on:
   workflow_dispatch:
-    #schedule:
-    #- cron: '11 6 * * *'
+  schedule:
+  # - cron: '11 6 * * *'
+    - cron: "*/10 * * * *"
 
 jobs:
   schedule_pipelines:
@@ -30,6 +31,7 @@ jobs:
       - name: execute python workflows from bash script
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+          AQICN_API_KEY: ${{ secrets.AQICN_API_KEY }}
         run: |
           ipython notebooks/airquality/2_air_quality_feature_pipeline.ipynb
           ipython notebooks/airquality/4_air_quality_batch_inference.ipynb
