--- a/.github/workflows/air-quality-daily.yml
+++ b/.github/workflows/air-quality-daily.yml
@@ -33,8 +33,7 @@ jobs:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
           AQICN_API_KEY: ${{ secrets.AQICN_API_KEY }}
         run: |
-          ipython notebooks/airquality/2_air_quality_feature_pipeline.ipynb
-          ipython notebooks/airquality/4_air_quality_batch_inference.ipynb
+          make aq-github
       - name: github pages publish
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
