--- a/.github/workflows/air-quality-daily.yml
+++ b/.github/workflows/air-quality-daily.yml
@@ -2,9 +2,9 @@ name: air-quality-daily
 
 on:
   workflow_dispatch:
-  # schedule:
+  schedule:
   # - cron: '11 6 * * *'
-    # - cron: "*/10 * * * *"
+    - cron: "* * * * *"
 
 jobs:
   schedule_pipelines:
